create boilerplate for paddle microservice
added db migration for identifying the billing provider

wip

wip paddle service api

wip paddle

wip

ok getting there

wip

fix

wip

wip

fix

ok seems to work

fixes

wip

fixes

fixes

ok

ok

fix downgrade flow

fix

deployment code fixes

fixes

fix

ok

typecheck fix

fix prettier and lint

fix lint

--- a/packages/web/app/.env.template
+++ b/packages/web/app/.env.template
@@ -29,5 +29,6 @@ INTEGRATION_SLACK_CLIENT_SECRET="<sync>"
 # GitHub
 INTEGRATION_GITHUB_APP_NAME="<sync>"
 
-# Stripe
-STRIPE_PUBLIC_KEY="<sync>"
+# Paddle
+PADDLE_CLIENT_SIDE_TOKEN="<sync>"
+PADDLE_ENVIRONMENT="<sync>"
