--- a/packages/services/server/.env.template
+++ b/packages/services/server/.env.template
@@ -16,7 +16,8 @@ SCHEMA_ENDPOINT="http://localhost:6500"
 SCHEMA_POLICY_ENDPOINT="http://localhost:6600"
 USAGE_ESTIMATOR_ENDPOINT="http://localhost:4011"
 RATE_LIMIT_ENDPOINT="http://localhost:4012"
-BILLING_ENDPOINT="http://localhost:4013"
+STRIPE_BILLING_ENDPOINT="http://localhost:4013"
+PADDLE_BILLING_ENDPOINT="http://localhost:4019"
 WEBHOOKS_ENDPOINT="http://localhost:6250"
 EMAILS_ENDPOINT="http://localhost:6260"
 REDIS_HOST="localhost"
