--- a/packages/services/usage-ingestor/package.json
+++ b/packages/services/usage-ingestor/package.json
@@ -10,7 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@graphql-hive/core": "0.2.4",
+    "@graphql-hive/core": "workspace:*",
     "@hive/service-common": "workspace:*",
     "@hive/usage-common": "workspace:*",
     "@sentry/node": "7.110.1",
