--- a/packages/libraries/client/package.json
+++ b/packages/libraries/client/package.json
@@ -48,8 +48,8 @@
   "dependencies": {
     "@graphql-hive/core": "^0.2.4",
     "@graphql-tools/utils": "^10.0.0",
+    "@whatwg-node/fetch": "0.9.17",
     "async-retry": "1.3.3",
-    "axios": "^1.6.0",
     "tiny-lru": "8.0.2"
   },
   "optionalDependencies": {
