--- a/packages/libraries/client/package.json
+++ b/packages/libraries/client/package.json
@@ -72,7 +72,7 @@
     "graphql": "16.8.1",
     "graphql-ws": "5.16.0",
     "graphql-yoga": "5.2.0",
-    "nock": "13.5.4",
+    "nock": "14.0.0-beta.5",
     "vitest": "1.5.0",
     "ws": "8.16.0"
   },
